Fixing a sliding text at intro section on mobiles

--- a/css/styles.css
+++ b/css/styles.css
@@ -260,6 +260,7 @@ body {
 	position: relative;
 }
 .intro__str-sliding-element {
+	display: block;
 	text-transform: lowercase;
 	color: #f60;
 	font-variant: small-caps;
